--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 
 [dependencies]
 tokio = {version="1.26.0", features = ["full"]}
-
+log = "0.4.17"
 anyhow = "1.0.69"
 
+
+[dev-dependencies]
+custom-utils = "0.10.12"
