--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 tokio = {version="1.26.0", features = ["full"]}
 log = "0.4.17"
 anyhow = "1.0.69"
-
+async-trait = "0.1.66"
 
 [dev-dependencies]
 custom-utils = "0.10.12"
