--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,16 @@
 [package]
-name = "event-bus"
+name = "event_bus"
 version = "0.1.0"
 edition = "2021"
+description = "a event bus"
+repository = "https://github.com/jm-observer/event_bus"
 
+license-file = "LICENSE"
+readme = "README.md"
+
+include = [
+    "LICENSE", "Cargo.toml", "README.md", "src/**/*.rs"
+]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
