--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,2 @@
-[package]
-name = "for_event_bus"
-version = "0.1.2"
-edition = "2021"
-description = "a event bus"
-repository = "https://github.com/jm-observer/for_event_bus"
-
-license-file = "LICENSE"
-readme = "README.md"
-
-include = [
-    "LICENSE", "Cargo.toml", "README.md", "src/**/*.rs"
-]
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-tokio = {version="1.26.0", features = ["sync", "rt"]}
-log = "0.4.17"
-#anyhow = "1.0.69"
-#async-trait = "0.1.66"
-
-[dev-dependencies]
-custom-utils = "0.10.12"
-tokio = {version="1.26.0", features = ["full"]}
-
+[workspace]
+members = ["for-event-bus", "for-event-bus-derive"]
