--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,5 @@
 [workspace]
 members = ["for-event-bus", "for-event-bus-derive"]
+
+#[patch.crates-io]
+#for-event-bus-derive = { path = "./for-event-bus-derive"}
