--- a/for-event-bus/Cargo.toml
+++ b/for-event-bus/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "for-event-bus"
-version = "0.1.3"
+name = "for_event_bus"
+version = "0.1.4"
 edition = "2021"
 description = "a event bus"
 repository = "https://github.com/jm-observer/for_event_bus"
@@ -16,7 +16,7 @@ include = [
 [dependencies]
 tokio = {version="1.26.0", features = ["sync", "rt"]}
 log = "0.4.17"
-for-event-bus-derive = "0.1.0"
+for-event-bus-derive = "0.1.1"
 
 [dev-dependencies]
 custom-utils = { version = "0.10.14"}
