优化追踪的日志

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,10 @@
 [workspace]
 members = ["for-event-bus", "for-event-bus-derive"]
 
-[patch.crates-io]
-for-event-bus-derive = { path = "./for-event-bus-derive"}
+#[patch.crates-io]
+#for-event-bus-derive = { path = "./for-event-bus-derive"}
+
+
+
+#[patch.crates-io]
+#custom-utils = {path = "../custom-utils"}
